--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
 
@@ -38,4 +39,11 @@ dependencies {
     compile 'com.google.android.gms:play-services-appindexing:9.4.0'
     compile 'com.android.support:support-v4:24.2.1'
     testCompile 'junit:junit:4.12'
+
+    apt "com.github.Raizlabs.DBFlow:dbflow-processor:$rootProject.ext.dbflow_version"
+    // use kapt for kotlin apt
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:$rootProject.ext.dbflow_version"
+    compile "com.github.Raizlabs.DBFlow:dbflow:$rootProject.ext.dbflow_version"
+
+
 }
